# feditor

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  main.cpp  shortcuts.tonotforget
configs/: keys.json
editor/: CMakeLists.txt  buffer.cpp  buffer.hpp  command.hpp  configs.hpp  editor.cpp  editor.hpp  glyph_handler.cpp  glyph_handler.hpp  input_handler.cpp  input_handler.hpp  layout.hpp  utils.hpp  window.cpp  window.hpp
sdl2/: FindSDL2.cmake  FindSDL2_ttf.cmake
source/: main.cpp
source/common/: buffer.cpp  buffer.hpp  common.cpp  common.hpp  fsignal.cpp  fsignal.hpp  fstring.cpp  fstring.hpp  macros.cpp  macros.h  utility.hpp  vector2.hpp
source/core/: buffer.cpp  buffer.hpp  buffer_handler.cpp  buffer_handler.hpp  core.cpp  core.hpp  editor.cpp  editor.hpp  editor_state.hpp  executor.cpp  executor.hpp  executor_module.hpp  executor_trie.cpp  executor_trie.hpp  executoraccess.hpp  executoroc.hpp  insert_module.cpp  insert_module.hpp
source/core/executors/: editor.cpp  editor.hpp  executor_description.hpp  file_manager.cpp  file_manager.hpp
source/gui/: colors.cpp  colors.hpp  glyph_handler.cpp  glyph_handler.hpp  graphics.cpp  graphics.hpp  gui.cpp  gui.hpp  gui_configs.hpp  gui_handler.cpp  gui_handler.hpp  gui_layout.cpp  gui_layout.hpp  vec2.hpp  widget.cpp  widget.hpp  widget_editor.cpp  widget_editor.hpp  widget_label.cpp  widget_label.hpp  widget_statusline.cpp  widget_statusline.hpp  widget_tab.cpp  widget_tab.hpp  window.cpp  window.hpp
source/gui/widgets/: widget.cpp  widget.hpp  widget_button.cpp  widget_button.hpp  widget_editor.cpp  widget_editor.hpp  widget_editorentity.cpp  widget_editorentity.hpp  widget_float.cpp  widget_float.hpp  widget_label.cpp  widget_label.hpp  widget_statusline.cpp  widget_statusline.hpp  widget_tab.cpp  widget_tab.hpp  widget_tab_list.cpp  widget_tab_list.hpp
source/input/: input.cpp  input.hpp  input_handler.cpp  input_handler.hpp  key_act.hpp  key_map.cpp  key_map.hpp  keymap.hpp  keys.cpp  keys.hpp
